--- a/ClassesLibrary/ClassesLibrary.csproj
+++ b/ClassesLibrary/ClassesLibrary.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Loggin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Student.cs" />
     <Compile Include="Vehicle.cs" />
