--- a/ClassesLibrary/ClassesLibrary.csproj
+++ b/ClassesLibrary/ClassesLibrary.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ContactInfo.cs" />
+    <Compile Include="CreditCardAccount.cs" />
     <Compile Include="Customer.cs" />
     <Compile Include="Loggin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
