--- a/ClassesLibrary/ClassesLibrary.csproj
+++ b/ClassesLibrary/ClassesLibrary.csproj
@@ -45,6 +45,7 @@
     <Compile Include="ContactInfo.cs" />
     <Compile Include="CreditCardAccount.cs" />
     <Compile Include="Customer.cs" />
+    <Compile Include="Library.cs" />
     <Compile Include="Loggin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Student.cs" />
